force-app/main/default/objects/Historical_Compliance__c/Historical_Compliance__c.object-meta.xml
<CustomObject>
    <description>Data contains information about the tax liability report</description>
    <label>Historical Compliance</label>
    <nameField>
        <label>Historical Compliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historical Compliances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>