force-app/main/default/objects/Historical_Compliance__c/fields/Imputed_Income__c.field-meta.xml
<CustomField>
    <fullName>Imputed_Income__c</fullName>
    <label>Imputed Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>