force-app/main/default/objects/Historical_Compliance__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Insurance Card</fullName>
            </value>
            <value>
                <fullName>Not Meeting Min</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>No Expiration Date</fullName>
            </value>
            <value>
                <fullName>Missing Umbrella Policy</fullName>
            </value>
            <value>
                <fullName>Missing Insurance Dec Page</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>