force-app/main/default/objects/Historical_Compliance__c/fields/IRS_Max_Allowance__c.field-meta.xml
<CustomField>
    <fullName>IRS_Max_Allowance__c</fullName>
    <label>IRS Max Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>