force-app/main/default/objects/Historical_Compliance__c/fields/Total_Approved_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Mileage__c</fullName>
    <label>Total Approved Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>