force-app/main/default/objects/Historical_Compliance__c/fields/Total_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Total_Reimbursement__c</fullName>
    <label>Total Reimbursement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>