force-app/main/default/objects/Historical_Compliance__c/fields/Vehicle_Age__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Age__c</fullName>
    <label>Vehicle Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>